feat: Dependency updates and misc refactorings